--- a/cv.tex
+++ b/cv.tex
@@ -32,7 +32,7 @@
 
 \begin{rSection}{Education}
 
-{\bf Belarusian State University of Informatics and Radioelectronics, Minsk} \hfill {\em present} \\ 
+{\bf Belarusian State University of Informatics and Radioelectronics, Minsk} \hfill {\em Present} \\ 
 Faculty of Computer Systems and Networks \\
 M.S. in Computer Science \& Software Engineering \smallskip \\
 {\bf Belarusian State University of Informatics and Radioelectronics, Minsk} \hfill {\em July 2012} \\ 
@@ -42,65 +42,91 @@ B.S. in Computing Machines, Systems and Networks \\
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE SECTION
+%	TECHNOLOGY SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Experience}
-
-\begin{rSubsection}{ACME, Inc}{October 2010 - Present}{Web Developer}{Palo Alto, CA}
-\item Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.
-\item Donec et mollis dolor. Praesent et diam eget libero Adobe Coldfusion egestas mattis sit amet vitae augue.
-\item Nam tincidunt congue enim, ut porta lorem Microsoft SQL lacinia consectetur.
-\item Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-\item Pellentesque auctor nisi id magna consequat JavaScript sagittis.
-\item Aliquam at massa ipsum. Quisque bash bibendum purus convallis nulla ultrices ultricies.
-\end{rSubsection}
-
-%------------------------------------------------
-
-\begin{rSubsection}{AJAX Hosting}{December 2009 - October 2010}{Lead Developer}{Austin, TX}
-\item Aenean ut gravida lorem. Ut turpis felis, Perl pulvinar a semper sed, adipiscing id dolor.
-\item Curabitur dapibus enim sit amet elit pharetra tincidunt website feugiat nisl imperdiet. Ut convallis AJAX libero in urna ultrices accumsan.
-\item Cum sociis natoque penatibus et magnis dis MySQL parturient montes, nascetur ridiculus mus.
-\item In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.
-\item Nullam cursus suscipit nisi, et ultrices justo sodales nec. Fusce venenatis facilisis lectus ac semper.
-\end{rSubsection}
-
-%------------------------------------------------
-
-\begin{rSubsection}{TinySoft}{January 2008 - April 2010}{Web Designer \& Developer}{Gainesville, GA}
-\item Vivamus PostgreSQL fermentum semper porta. Nunc diam velit PHP, adipiscing ut tristique vitae
-\item Maecenas convallis ullamcorper ultricies stylesheets.
-\item Quisque mi metus, unit tests CSS ornare sit amet fermentum et, tincidunt et orci.
-\item Curabitur venenatis pulvinar tellus gravida ornare. Sed et erat faucibus nunc euismod ultricies ut id
-\end{rSubsection}
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-%	TECHNICAL STRENGTHS SECTION
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Technical Strengths}
+\begin{rSection}{Have experience with}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Computer Languages & Prolog, Haskell, AWK, Erlang, Scheme, ML \\
-Protocols \& APIs & XML, JSON, SOAP, REST \\
-Databases & MySQL, PostgreSQL, Microsoft SQL \\
-Tools & SVN, Vim, Emacs
+Operating Systems     & Linux (Arch, Debian, CentOS, Ubuntu), Mac OS X \smallskip \\
+Programming Languages & Ruby, C, Bourne-compatible shells, JavaScript, ANSI Common Lisp, \\
+                      & Factor, Scheme, Erlang, C++, Lua, Scala, Perl, Python and more\smallskip \\
+Markup and Typesetting & \LaTeX, HTML 4.01, XHTML 1.1, HTML5, HAML, CSS2, CSS3, \\
+                       & SASS, Less, Twitter Bootstrap \smallskip \\
+Server technologies   & Nginx, Apache httpd, OpenSSH, Postfix, Prosody, vsftpd, Squid, \\
+                      & Chef, Corosync, Pacemaker, DRBD \smallskip \\
+Databases & MySQL/MariaDB, PostgreSQL, SQLite, MongoDB, Cassandra \smallskip \\
+Tools & Zsh, Git, Vim, Emacs, gpicker, ctags, the silver searcher, \\
+      &    GNU Global, splint, gdb, strace, valgrind, gprof \smallskip \\
+Programming paradigms & Imperative, Functional, Object-oriented (class-based, prototype-based, \\
+                      & with message-passing and generic functions), Concatenative.
 \end{tabular}
 
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-%	EXAMPLE SECTION
+%	NOTES SECTION
 %----------------------------------------------------------------------------------------
 
-%\begin{rSection}{Section Name}
+%% \begin{rSection}{Spheres of interest}
+%%   \smallskip
+%%   \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
+%%     \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
+%%   \item Programming languages
+%%   \item Productivity in software development
+%%   \end{list}
+%% \end{rSection}
 
-%Section content\ldots
+%----------------------------------------------------------------------------------------
+%	WORK EXPERIENCE SECTION
+%----------------------------------------------------------------------------------------
 
-%\end{rSection}
+\begin{rSection}{Work positions}
+
+\begin{rSubsection}{Belarusian State University of Informatics and Radioelectronics}{February 2013 - Present}{Teaching assistant at Electronic Computing Machines Department (part-time)}{Minsk, Belarus}
+\item Taught students how to use git and github.
+\item Together with students formalized grading criteria.
+\item Formalized some code quality metrics.
+\item I teach interested students linux in my spare time.
+\end{rSubsection}
+
+\begin{rSubsection}{PowerMeMobile, Inc.}{January 2013 - February 2013}{Problem solver}{Minsk, Belarus}
+\item Gave an idea of automating deployment process (new tier deployments may take up to
+  a month of SysAdmin team work)
+\item Implemented initial stages of deployment automation (bootstrapping corosync/pacemaker cluster,
+  installing and configuring DRBD and nginx) using Chef
+\item Made entire deployment configurable from a single place (from chef workstation using node attributes)
+\item Got an agreement on opensourcing this efforts.
+\end{rSubsection}
+
+\begin{rSubsection}{Altoros Systems, Inc.}{October 2011 - September 2012}{Software Engineer in Ruby department}{Minsk, Belarus}
+\item Proved that custom multisite functionality is a bad idea. Dropped the hacks and refactored application to use rails 3 engines.
+\item Participated in porting internal RightScale services (mostly sinatra+cassandra) to JRuby to utilize native Thrift.
+\item Participated in all stages of design and development on many projects.
+\end{rSubsection}
+
+\begin{rSubsection}{Itransition, Inc.}{February 2011 - October 2011}{Junior Developer in Ruby department}{Minsk, Belarus}
+\item Solely ported large social gaming engine from Rails 2 to Rails 3.
+\item Initiated using SASS and Compass, which led to development speedup and stylesheets support simplification.
+\end{rSubsection}
+
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
+%	NOTES SECTION
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Some facts about me}
+  \smallskip
+  \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
+    \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
+  \item I touch type using Dvorak keyboard layout
+  \item I like cycling
+  \item I use CLFSWM (Common Lisp FullScreen Window Manager) which is pretty unique tiling
+    window manager. I like to tell that I've contributed to it, as this thing is really cool.
+  \item I am in an eternal search for a perfectly expressive programming language.
+  \end{list}
+\end{rSection}
 
 %----------------------------------------------------------------------------------------
 
