--- a/cv.tex
+++ b/cv.tex
@@ -92,10 +92,10 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 
 \begin{rSubsection}{PowerMeMobile, Inc.}{January 2013 - February 2013}{Problem solver}{Minsk, Belarus}
 \item Gave an idea of automating deployment process (new tier deployments may take up to
-  a month of SysAdmin team work)
+  a month of SysAdmin team work).
 \item Implemented initial stages of deployment automation (installing base cluster software,
-  configuring corosync/pacemaker, installing and configuring DRBD and nginx as resource agents) using Chef
-\item Made entire deployment configurable from a single place (from chef workstation using node attributes)
+  configuring corosync/pacemaker, installing and configuring DRBD and nginx as resource agents) using Chef.
+\item Made entire deployment configurable from a single place (from chef workstation using node attributes).
 \item Got an agreement on opensourcing this efforts.
 \end{rSubsection}
 
@@ -107,8 +107,8 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 
 \begin{rSubsection}{Itransition, Inc.}{February 2011 - October 2011}{Junior Developer in Ruby department}{Minsk, Belarus}
 \item Solely ported large social gaming engine from Rails 2 to Rails 3.
-\item Initiated using SCSS and Compass, which led to development speedup and stylesheets support simplification.
-\item Configured production server from scratch for automated Capistrano deployment
+\item Initiated using SCSS and Compass, which led to stylesheets development and modification speedup.
+\item Configured production server from scratch and setup automated Capistrano deployment.
 \end{rSubsection}
 
 \end{rSection}
