added line about opensource contributions

--- a/cv.tex
+++ b/cv.tex
@@ -129,9 +129,9 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   %%   contest and surprisingly received ``Guru'' certificate (top 4.1\%)
   \item Somewhere in the past I was passionate about japanese animation, so I learned
     some japanese (have JLPT4 certificate)
+  \item I have contributed to upstream of at least 9 opensource project (mostly minor, but still).
   \item I use CLFSWM (Common Lisp FullScreen Window Manager) which is pretty unique tiling
-    window manager. I like to tell people that I've contributed to it, as this thing
-    is really cool.
+      window manager. It is one of the projects I've contributed to.
   \item I am in an eternal search for a perfectly expressive programming language.
   \end{list}
 \end{rSection}
