added Intetics and changed number of OSS contributions

--- a/cv.tex
+++ b/cv.tex
@@ -59,7 +59,7 @@ Databases & MySQL/MariaDB, PostgreSQL, SQLite, MongoDB, Cassandra \smallskip \\
 Tools & zsh, git, tmux, vim, emacs, gpicker, ctags, the silver searcher, \\
       &    GNU Global, splint, gdb, strace, valgrind, gprof \smallskip \\
 Programming paradigms & Imperative, Object-oriented (class-based, prototype-based), \\
-                      & Functional, Concatenative.
+                      & Functional, Concatenative (stack-based).
 \end{tabular}
 
 \end{rSection}
@@ -83,11 +83,15 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 
 \begin{rSection}{Work positions}
 
+\begin{rSubsection}{Intetics Co.}{July 2013 - Present}{Senior Software Engineer}{Minsk, Belarus}
+\item \ldots
+\end{rSubsection}
+
 \begin{rSubsection}{Belarusian State University of Informatics and Radioelectronics}{February 2013 - Present}{Teaching assistant at Electronic Computing Machines Department (part-time)}{Minsk, Belarus}
 \item Taught students how to use git and github.
 \item Together with students formalized grading criteria.
 \item Formalized some code quality metrics.
-\item I teach interested students linux in my spare time.
+\item Taught interested students linux in my spare time.
 \end{rSubsection}
 
 \begin{rSubsection}{PowerMeMobile, Inc.}{January 2013 - February 2013}{Problem solver}{Minsk, Belarus}
@@ -129,7 +133,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   %%   contest and surprisingly received ``Guru'' certificate (top 4.1\%)
   \item Somewhere in the past I was passionate about japanese animation, so I learned
     some japanese (have JLPT4 certificate)
-  \item I have contributed to upstream of at least 9 opensource project 
+  \item I have contributed to upstream of at least 11 opensource project
       and have some personal opensource projects.
   \item I use CLFSWM (Common Lisp FullScreen Window Manager) which is pretty unique tiling
       window manager. It is one of the projects I've contributed to.
