--- a/cv.tex
+++ b/cv.tex
@@ -32,12 +32,12 @@
 
 \begin{rSection}{Education}
 
-{\bf Belarusian State University of Informatics and Radioelectronics, Minsk} \hfill {\em Present} \\ 
+{\bf Belarusian State University of Informatics and Radioelectronics, Minsk} \hfill {\em July 2013} \\ 
 Faculty of Computer Systems and Networks \\
 M.S. in Computer Science \& Software Engineering \smallskip \\
 {\bf Belarusian State University of Informatics and Radioelectronics, Minsk} \hfill {\em July 2012} \\ 
 Faculty of Computer Systems and Networks \\
-B.S. in Computing Machines, Systems and Networks \\
+B.S. in Systems Engineering \\
 
 \end{rSection}
 
