--- a/cv.tex
+++ b/cv.tex
@@ -49,15 +49,15 @@ B.S. in Systems Engineering \\
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Operating Systems     & Linux (Arch, Debian, CentOS, Ubuntu), Mac OS X \smallskip \\
-Programming Languages & Ruby, C, Bourne-compatible shells, JavaScript, ANSI Common Lisp, \\
-                      & Factor, Scheme, Erlang, C++, Lua, Scala, Perl, Python and more\smallskip \\
+Programming Languages & Ruby, C, Bourne-compatible shells, JavaScript, Perl, C++, Erlang, \\
+                      & Common Lisp, Factor, Scheme, Lua, Scala, Python and more\smallskip \\
 Markup and Typesetting & \LaTeX, HTML 4.01, XHTML 1.1, HTML5, HAML, CSS2, CSS3, \\
                        & SASS/SCSS, Less, Twitter Bootstrap \smallskip \\
-Server technologies   & Nginx, Apache httpd, OpenSSH, Postfix, Prosody, vsftpd, Squid, \\
-                      & Chef, Corosync, Pacemaker, DRBD \smallskip \\
+Server technologies   & Chef, Nginx, Apache httpd, OpenSSH, Postfix, Prosody, vsftpd,\\
+                      & Squid, Corosync, Pacemaker, DRBD \smallskip \\
 Databases & MySQL/MariaDB, PostgreSQL, SQLite, MongoDB, Cassandra \smallskip \\
-Tools & zsh, git, tmux, vim, emacs, gpicker, ctags, the silver searcher, \\
-      &    GNU Global, splint, gdb, strace, valgrind, gprof \smallskip \\
+Tools & zsh, git, emacs, vim, tmux, gpicker, ctags, the silver searcher, \\
+      & GNU Global, splint, gdb, strace, valgrind, gprof \smallskip \\
 Programming paradigms & Imperative, Object-oriented (class-based, prototype-based), \\
                       & Functional, Concatenative (stack-based).
 \end{tabular}
@@ -87,7 +87,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 ~
 \end{rSubsection}
 
-\begin{rSubsection}{Belarusian State University of Informatics and Radioelectronics}{February 2013 - Present}{Teaching assistant at Electronic Computing Machines Department (part-time)}{Minsk, Belarus}
+\begin{rSubsection}{\parbox[t][2em][t]{9cm}{Belarusian State University of Informatics and Radioelectronics}}{February 2013 - January 2014 }{Teaching assistant at Electronic Computing Machines Department (part-time)}{Minsk, Belarus}
 \item Taught students how to use git and github.
 \item Together with students formalized grading criteria.
 \item Formalized some code quality metrics.
@@ -127,7 +127,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
     \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
   \item I use Dvorak keyboard layout
   \item I like cycling
-  \item First time I installed and started playing with linux was 8 years ago (it was
+  \item First time I installed and started playing with linux was 9 years ago (it was
     Mandrake 10 in 2005)
   %% \item This summer I took part in ``System administrator 2012'' (http://admin2012.ru)
   %%   contest and surprisingly received ``Guru'' certificate (top 4.1\%)
@@ -135,8 +135,6 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
     some japanese (have JLPT4 certificate)
   \item I have contributed to upstream of at least 11 opensource project
       and have some personal opensource projects.
-  \item I use CLFSWM (Common Lisp FullScreen Window Manager) which is pretty unique tiling
-      window manager. It is one of the projects I've contributed to.
   \item I am in an eternal search for a perfectly expressive programming language.
   \end{list}
 \end{rSection}
