updated programming languages

--- a/cv.tex
+++ b/cv.tex
@@ -49,8 +49,8 @@ B.S. in Systems Engineering \\
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Operating Systems     & Linux (Arch, Debian, CentOS, Ubuntu), Mac OS X \smallskip \\
-Programming Languages & Ruby, C, Bourne-compatible shells, JavaScript, Perl, C++, Erlang, \\
-                      & Common Lisp, Factor, Scheme, Lua, Scala, Python and more\smallskip \\
+Programming Languages & Clojure, Ruby, C, Bourne-compatible shells, JavaScript, Perl, C++, \\
+                      & Common Lisp, Erlang, Factor, Scheme, Lua, Python and more\smallskip \\
 Markup and Typesetting & \LaTeX, HTML 4.01, XHTML 1.1, HTML5, HAML, CSS2, CSS3, \\
                        & SASS/SCSS, Less, Twitter Bootstrap \smallskip \\
 Server technologies   & Chef, Nginx, Apache httpd, OpenSSH, Postfix, Prosody, vsftpd,\\
