added rubyroid, improved intetics, added neo4j and orientdb

--- a/cv.tex
+++ b/cv.tex
@@ -51,11 +51,12 @@ B.S. in Systems Engineering \\
 Operating Systems     & Linux (Arch, Debian, CentOS, Ubuntu), Mac OS X \smallskip \\
 Programming Languages & Clojure, Ruby, C, Bourne-compatible shells, JavaScript, Perl, C++, \\
                       & Common Lisp, Erlang, Factor, Scheme, Lua, Python and more\smallskip \\
-Markup and Typesetting & \LaTeX, HTML 4.01, XHTML 1.1, HTML5, HAML, CSS2, CSS3, \\
-                       & SASS/SCSS, Less, Twitter Bootstrap \smallskip \\
+Markup and Typesetting & \LaTeX, HTML, HAML, Slim, CSS, SASS/SCSS, Less, \\
+                       & Twitter Bootstrap \smallskip \\
 Server technologies   & Chef, Nginx, Apache httpd, OpenSSH, Postfix, Prosody, vsftpd,\\
-                      & Squid, Corosync, Pacemaker, DRBD \smallskip \\
-Databases & MySQL/MariaDB, PostgreSQL, SQLite, MongoDB, Cassandra \smallskip \\
+                      & Squid, Corosync, Pacemaker, DRBD, \smallskip \\
+SQL Databases & PostgreSQL, MySQL/MariaDB, SQLite \smallskip \\
+NoSQL Databases & Neo4j, OrientDB, MongoDB, Cassandra \smallskip \\
 Tools & zsh, git, emacs, vim, tmux, gpicker, ctags, the silver searcher, \\
       & GNU Global, splint, gdb, strace, valgrind, gprof \smallskip \\
 Programming paradigms & Imperative, Object-oriented (class-based, prototype-based), \\
@@ -83,8 +84,16 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 
 \begin{rSection}{Work positions}
 
-\begin{rSubsection}{Intetics Co.}{July 2013 - Present}{Senior Software Engineer}{Minsk, Belarus}
+\begin{rSubsection}{Rubyroid Labs, LLC}{April 2014 - Present}{Senior Software Engineer}{Minsk, Belarus}
 ~
+\end{rSubsection}
+
+\begin{rSubsection}{Intetics Co.}{July 2013 - April 2014}{Senior Software Engineer}{Minsk, Belarus}
+\item Made fully-automated production server setup
+\item Worked on refactoring legacy codebase
+\item Worked on security-related features (ip whitelisting, xss testing)
+\item Implemented backend service for mobile apps.
+\item Implemented automatic management of VPN servers DNS rotation
 \end{rSubsection}
 
 \begin{rSubsection}{\parbox[t][2em][t]{9cm}{Belarusian State University of Informatics and Radioelectronics}}{February 2013 - January 2014 }{Teaching assistant at Electronic Computing Machines Department (part-time)}{Minsk, Belarus}
