put bootstrap to previous line

--- a/cv.tex
+++ b/cv.tex
@@ -51,8 +51,7 @@ B.S. in Systems Engineering \\
 Operating Systems     & Linux (Arch, Debian, CentOS, Ubuntu), Mac OS X \smallskip \\
 Programming Languages & Clojure, Ruby, C, Bourne-compatible shells, JavaScript, Perl, C++, \\
                       & Common Lisp, Erlang, Factor, Scheme, Lua, Python and more\smallskip \\
-Markup and Typesetting & \LaTeX, HTML, HAML, Slim, CSS, SASS/SCSS, Less, \\
-                       & Twitter Bootstrap \smallskip \\
+Markup and Typesetting & \LaTeX, HTML, HAML, Slim, CSS, SASS/SCSS, Less, Bootstrap \smallskip \\
 Server technologies   & Chef, Nginx, Apache httpd, OpenSSH, Postfix, Prosody, vsftpd,\\
                       & Squid, Corosync, Pacemaker, DRBD, \smallskip \\
 SQL Databases & PostgreSQL, MySQL/MariaDB, SQLite \smallskip \\
