dropped cycling line. reformulated first-time linux

--- a/cv.tex
+++ b/cv.tex
@@ -134,11 +134,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
     \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
   \item I use Dvorak keyboard layout
-  \item I like cycling
-  \item First time I installed and started playing with linux was 9 years ago (it was
-    Mandrake 10 in 2005)
-  %% \item This summer I took part in ``System administrator 2012'' (http://admin2012.ru)
-  %%   contest and surprisingly received ``Guru'' certificate (top 4.1\%)
+  \item I started playing with Linux about 9 years ago (it was Mandrake 10 in 2005)
   \item Somewhere in the past I was passionate about japanese animation, so I learned
     some japanese (have JLPT4 certificate)
   \item I have contributed to upstream of at least 11 opensource project
