--- a/cv.tex
+++ b/cv.tex
@@ -49,9 +49,9 @@ B.S. in Systems Engineering \\
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Operating Systems     & Linux (Arch, Debian, CentOS, Ubuntu), Mac OS X \smallskip \\
-Programming Languages & Clojure, Ruby, C, Bourne-compatible shells, JavaScript, Perl, C++, \\
-                      & Common Lisp, Erlang, Factor, Scheme, Lua, Python and more\smallskip \\
-Markup and Typesetting & \LaTeX, HTML, HAML, Slim, CSS, SASS/SCSS, Less, Bootstrap \smallskip \\
+Programming Languages & Clojure, Ruby, C, Bash, JavaScript, Perl, Common Lisp, Erlang, \\
+                      & Factor, Scheme, Lua, C++, Python and more\smallskip \\
+Markup and Typesetting & \LaTeX, HTML, Haml, Slim, CSS, SASS/SCSS, Less, Bootstrap \smallskip \\
 Server technologies   & Chef, Nginx, Apache httpd, OpenSSH, Postfix, Prosody, vsftpd,\\
                       & Squid, Corosync, Pacemaker, DRBD, \smallskip \\
 SQL Databases & PostgreSQL, MySQL/MariaDB, SQLite \smallskip \\
