some updates to CV

--- a/cv.tex
+++ b/cv.tex
@@ -50,16 +50,16 @@ B.S. in Systems Engineering \\
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Operating Systems     & Linux (Arch, Debian, CentOS, Ubuntu), Mac OS X \smallskip \\
 Programming Languages & Clojure, Ruby, C, Bash, JavaScript, Perl, Common Lisp, Erlang, \\
-                      & Factor, Scheme, Lua, C++, Python and more\smallskip \\
+                      & Maude, Factor, Scheme, Lua, C++, Python and more\smallskip \\
 Markup and Typesetting & \LaTeX, HTML, Haml, Slim, CSS, SASS/SCSS, Less, Bootstrap \smallskip \\
 Server technologies   & Chef, Nginx, Apache httpd, OpenSSH, Postfix, Prosody, vsftpd,\\
                       & Squid, Corosync, Pacemaker, DRBD, \smallskip \\
-SQL Databases & PostgreSQL, MySQL/MariaDB, SQLite \smallskip \\
-NoSQL Databases & Neo4j, OrientDB, MongoDB, Cassandra \smallskip \\
+Relational Databases & PostgreSQL, MySQL/MariaDB, SQLite \smallskip \\
+Non-relational Databases & Neo4j, OrientDB, MongoDB, Cassandra \smallskip \\
 Tools & zsh, git, emacs, vim, tmux, gpicker, ctags, the silver searcher, \\
       & GNU Global, splint, gdb, strace, valgrind, gprof \smallskip \\
 Programming paradigms & Imperative, Object-oriented (class-based, prototype-based), \\
-                      & Functional, Concatenative (stack-based).
+                      & Functional, Concatenative (stack-based), Logical (Rewriting logic).
 \end{tabular}
 
 \end{rSection}
@@ -83,23 +83,31 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 
 \begin{rSection}{Work positions}
 
-\begin{rSubsection}{Rubyroid Labs, LLC}{April 2014 - Present}{Senior Software Engineer}{Minsk, Belarus}
+\begin{rSubsection}{Softswiss Casino Software}{October 2014 - Present}{Senior Software Engineer}{Minsk, Belarus}
 ~
+\end{rSubsection}
+
+\begin{rSubsection}{Rubyroid Labs, LLC}{April 2014 - September 2014}{Senior Software Engineer/Team Leader}{Minsk, Belarus}
+\item Designed application architecture
+\item Managed project development
+\item Did code reviews
+\item Solely implemented some internal services
 \end{rSubsection}
 
 \begin{rSubsection}{Intetics Co.}{July 2013 - April 2014}{Senior Software Engineer}{Minsk, Belarus}
 \item Made fully-automated production server setup
 \item Worked on refactoring legacy codebase
-\item Worked on security-related features (ip whitelisting, xss testing)
+\item Worked on security-related features (IP whitelisting, XSS testing)
 \item Implemented backend service for mobile apps.
 \item Implemented automatic management of VPN servers DNS rotation
+\item Did code reviews
 \end{rSubsection}
 
 \begin{rSubsection}{\parbox[t][2em][t]{9cm}{Belarusian State University of Informatics and Radioelectronics}}{February 2013 - January 2014 }{Teaching assistant at Electronic Computing Machines Department (part-time)}{Minsk, Belarus}
-\item Taught students how to use git and github.
+\item Taught students how to use Git and GitHub.
 \item Together with students formalized grading criteria.
 \item Formalized some code quality metrics.
-\item Taught interested students linux in my spare time.
+\item Taught Linux for interested students in my spare time.
 \end{rSubsection}
 
 \begin{rSubsection}{PowerMeMobile, Inc.}{January 2013 - February 2013}{Problem solver}{Minsk, Belarus}
@@ -129,17 +137,20 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 %	NOTES SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Some random facts}
+\begin{rSection}{Some facts to better understand what kind of person I am}
   \smallskip
   \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
     \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
+  \item I decided to tie my work to computers when I was 5.
+  \item First program in BASIC at age of 11, first HTML and JavaScript at 12, first program in Pascal at 13.
+  \item I started playing with Linux when I was 14 (it was Mandrake 10 in 2005)
   \item I use Dvorak keyboard layout
-  \item I started playing with Linux about 9 years ago (it was Mandrake 10 in 2005)
-  \item Somewhere in the past I was passionate about japanese animation, so I learned
-    some japanese (have JLPT4 certificate)
-  \item I have contributed to upstream of at least 11 opensource project
-      and have some personal opensource projects.
-  \item I am in an eternal search for a perfectly expressive programming language.
+  \item Some time ago I was passionate about japanese animation, so I learned
+    some japanese and passed an international exam (have JLPT4 certificate).
+  \item I remember myself learning esperanto and toki pona, and now I am learning Lojban.
+  \item I have a lot of personal opensource projects and have contributed to
+     upstream of at least 11 opensource projects.
+  \item I am still searching for perfectly expressive programming language.
   \end{list}
 \end{rSection}
 
