--- a/cv.tex
+++ b/cv.tex
@@ -13,7 +13,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%   PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
 \documentclass{resume} % Use the custom resume.cls style
@@ -27,7 +27,7 @@
 \begin{document}
 
 %----------------------------------------------------------------------------------------
-%	EDUCATION SECTION
+%   EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Education}
@@ -42,7 +42,7 @@ B.S. in Systems Engineering \\
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-%	TECHNOLOGY SECTION
+%   TECHNOLOGY SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Have experience with}
@@ -56,29 +56,17 @@ Server technologies   & Chef, Nginx, Apache httpd, OpenSSH, Postfix, Prosody, vs
                       & Squid, Corosync, Pacemaker, DRBD, \smallskip \\
 Relational Databases & PostgreSQL, MySQL/MariaDB, SQLite \smallskip \\
 Non-relational Databases & Neo4j, OrientDB, MongoDB, Cassandra \smallskip \\
-Tools & zsh, git, emacs, vim, tmux, gpicker, ctags, the silver searcher, \\
-      & GNU Global, splint, gdb, strace, valgrind, gprof \smallskip \\
+% Tools & zsh, git, emacs, vim, tmux, gpicker, ctags, the silver searcher, \\
+%       & GNU Global, splint, gdb, strace, valgrind, gprof \smallskip \\
 Programming paradigms & Imperative, Object-oriented (class-based, prototype-based), \\
-                      & Functional, Concatenative (stack-based), Logical (Rewriting logic).
+                      & Functional, Concatenative (stack-based), Logical (predicate logic, \\
+                      & rewriting logic).
 \end{tabular}
 
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-%	NOTES SECTION
-%----------------------------------------------------------------------------------------
-
-%% \begin{rSection}{Spheres of interest}
-%%   \smallskip
-%%   \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
-%%     \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
-%%   \item Programming languages
-%%   \item Productivity in software development
-%%   \end{list}
-%% \end{rSection}
-
-%----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE SECTION
+%   WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Work positions}
@@ -134,7 +122,7 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-%	NOTES SECTION
+%   NOTES SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Some facts to better understand what kind of person I am}
@@ -145,12 +133,39 @@ Programming paradigms & Imperative, Object-oriented (class-based, prototype-base
   \item First program in BASIC at age of 11, first HTML and JavaScript at 12, first program in Pascal at 13.
   \item I started playing with Linux when I was 14 (it was Mandrake 10 in 2005)
   \item I use Dvorak keyboard layout
-  \item Some time ago I was passionate about japanese animation, so I learned
-    some japanese and passed an international exam (have JLPT4 certificate).
-  \item I remember myself learning esperanto and toki pona, and now I am learning Lojban.
+  \item I tend to automate everything I could.
+  \item I use Emacs for last 4-5 years. Last 3 years I use it with Evil (vim emulation layer)
   \item I have a lot of personal opensource projects and have contributed to
-     upstream of at least 11 opensource projects.
-  \item I am still searching for perfectly expressive programming language.
+        upstream of at least 11 opensource projects.
+  \item Some time ago I was passionate about japanese animation, so I learned
+        some japanese and passed an international exam (have JLPT4 certificate). I remember myself
+        learning Esperanto and Toki Pona, and now I am learning Lojban.
+  \item Personality type ENTP.
+  \item I am an active ACM and ACM SIGPLAN member.
+  \item One of my primary interests is programming languages. I am still thinking of one
+        that would be perfectly expressive.
+  \end{list}
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
+%   INTERESTS SECTION
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{What I'm currently interested in (not implies proficiency)}
+  \smallskip
+  \begin{list}{$\cdot$}{\leftmargin=0em} % \cdot used for bullets, no indentation
+    \itemsep -0.5em \vspace{-0.5em} % Compress items in list together for aesthetics
+  \item Programming paradigms and programming languages
+  \item Rewriting logic (Maude system in particular)
+  \item Minimal syntax programming languages: Lisp (Clojure, Common Lisp, Scheme,
+        Qi/Shen), FORTH, Factor, APL, Refal, Rebol, Smalltalk
+  \item Programming music (Overtone, Extempore) and visuals (Quil, Processing, Fluxus).
+  \item Learning to draw.
+  \item Trying to understand how all people think, what are the differences between ways
+        people think, and what ways of thinking are possible but not currently used by human beings.
+  \item General semantics.
+  \item Personality models/typologies (MBTI/Socionics, Afanasiev's typology, Big 5, HEXACO).
+  \item Constructed languages.
   \end{list}
 \end{rSection}
 
